<resources>
    <string name="app_name">NoteApp</string>
    <string name="image_url">Insert valid url. Must be end picture format</string>
    <string name="hint_head">Title</string>
    <string name="hint_body">Content</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_note_warning">Are you sure you want to delete this note?</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="Yes">Yes</string>
    <string name="note_deleted">Note deleted successfully</string>
    <string name="No">No</string>
</resources>