<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_margin="@dimen/smallMargin">

    <HorizontalScrollView
        android:id="@+id/scrollViewColors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/color_layout_height"
        android:layout_marginHorizontal="@dimen/smallMargin"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/smallMargin"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf=" parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewColors">


        <ScrollView
            android:id="@+id/scrollViewBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp">


            <LinearLayout
                android:id="@+id/layoutNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow_post_it_body"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/editTextHead"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mediumMargin"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/yellow_post_it_head"
                    android:hint="@string/hint_head"
                    android:maxLines="1"
                    android:textAlignment="center"
                    tools:text="Sample Head" />

                <EditText
                    android:id="@+id/editTextBody"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="@dimen/mediumMargin"
                    android:background="@color/transparent"
                    android:gravity="left|top"
                    android:hint="@string/hint_body"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Sample Body" />

                <EditText
                    android:id="@+id/editTextURL"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:background="@color/transparent"
                    android:hint="@string/image_url">

                </EditText>

                <ImageView
                    android:id="@+id/imageViewImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mediumMargin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:visibility="visible" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewDate"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mediumMargin"
                    tools:text="20/04/2022" />
            </LinearLayout>

        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mediumMargin"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mediumMargin"
        android:backgroundTint="?attr/colorError"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>